--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.3+43
+version: 0.4.9+49
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -53,7 +53,7 @@ dependencies:
   cryptography: ^1.4.1
   convert: ^2.1.1
   flutter_spinkit: ^4.1.2+1
-
+  path: ^1.7.0
   # riverpod: ^0.12.1
 dev_dependencies:
   flutter_test:
@@ -105,6 +105,9 @@ flutter:
     #    - family: EmojiOne # TODO Check license (Only embed Noto Font for Desktop?)
     #      fonts:
     #        - asset: assets/font/emojione-android.ttf
+    - family: Noto Color Emoji
+      fonts:
+        - asset: assets/font/NotoColorEmoji.ttf
     - family: UniconsLine
       fonts:
         - asset: assets/font/UniconsLine.ttf
