--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.9+49
+version: 0.5.1+501
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -33,8 +33,8 @@ dependencies:
   blurhash_dart: ^0.2.3
   flutter_svg: ^0.19.1
   timeago: ^2.0.27
-  chewie: ^0.9.10
-  just_audio: ^0.5.6
+  chewie: ^0.12.0
+  just_audio: ^0.6.3
   emojis: ^0.9.3
   file_picker: ^2.1.0
   # file_picker_cross: ^4.2.6
@@ -47,14 +47,15 @@ dependencies:
   emoji_pick: ^0.1.0
 
   skynet:
-    path: ../skynet
+    git: https://github.com/redsolver/skynet.git
   mime: ^0.9.7
   image: ^2.1.18
   cryptography: ^1.4.1
   convert: ^2.1.1
   flutter_spinkit: ^4.1.2+1
   path: ^1.7.0
-  # riverpod: ^0.12.1
+  regexpattern: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
