new notification system and a lot of bug fixes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,8 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
